# ars548_ros

./: .gitignore  LICENSE  Readme.md
ars548_driver/: CMakeLists.txt  configurer.sh  package.xml
ars548_driver/docker/: Dockerfile
ars548_driver/include/ars548_driver/: ars548_data.h  ars548_driver.hpp  ars548_filter_example.hpp  ars548_filter_interface.hpp
ars548_driver/include/ars548_driver/ars548_data/: acceleration_lateral_cog.h  acceleration_longitudinal_cog.h  characteristic_speed.h  detection.h  detection_list.h  driving_direction.h  object.h  object_list.h  sensor_configuration.h  steering_angle_front_axle.h  udp_status.h  velocity_vehicle.h  yaw_rate.h
ars548_driver/include/ars548_driver/util/: byteswap.hpp  rough_equal.hpp
ars548_driver/launch/: ARSLiDar.xml  ARSLidarBag.xml  ars548_launch.launch  ars548_launch.xml  filter_launch.xml
ars548_driver/rviz/: RadarLidar.rviz  RadarVisualization.rviz  filter.rviz
ars548_driver/scripts/: setup_max_dist.sh
ars548_driver/src/: ars548_driver.cpp  ars548_driver_filter.cpp  ars548_driver_node.cpp  ars548_filter_node.cpp  radar_setup.cpp
ars548_messages/: CMakeLists.txt  package.xml
ars548_messages/msg/: AccelerationLateralCoG.msg  AccelerationLongitudinalCoG.msg  CharacteristicSpeed.msg  Detection.msg  DetectionList.msg  DrivingDirection.msg  Object.msg  ObjectList.msg  SensorConfiguration.msg  Status.msg  SteeringAngleFrontAxle.msg  VelocityVehicle.msg  YawRate.msg
