<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ars548_driver</name>
  <version>0.1.0</version>
  <description>An ARS548 RDI radar sensor driver for ROS Noetic </description>
  <maintainer email="dalejo@us.es">David Alejo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ars548_messages</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <exec_depend>roslaunch</exec_depend>

</package>
