<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ars548_driver</name>
  <version>1.0.1</version>
  <description>ROS2 node that reads and processes data obtained from the ARS548 Continental 4D Radar Sensor</description>
  <maintainer email="dalejo@us.es">David Alejo Teissière</maintainer>
  <author email="ffercal@upo.es">Fernando Fernández Calatayud</author>
  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ars548_messages</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
