<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ars548_messages</name>
  <version>1.0.1</version>
  <description>ROS2 node that has the IDL definition of the messages from the ARS548 Continental 4D Radar Sensor</description>
  <maintainer email="dalejo@us.es">David Alejo Teissière</maintainer>
  <author email="ffercal@upo.es">Fernando Fernández Calatayud</author>
  <license>BSD-3</license>
<depend>std_msgs</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
